finished NRP numbers, attempted shapes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="index.html"> Home </a>
                         </li>
                         <li>
-                            <a href="#deviSyafira"> Canvas </a>
+                            <a href="#adeliAriza"> Canvas </a>
                         </li>
                         <li>
                             <a href="#"> Contact </a>
@@ -36,7 +36,7 @@
                 </div>
             </nav>
 
-            <canvas id="deviSyafira"></canvas>
+            <canvas id="adeliAriza"></canvas>
         </div>
         <footer class="absolute bottom-0 left-0 right-0 flex w-full justify-between py-14 bg-transparent z-[3]">
             <div class="container flex items-center justify-flex-start">
@@ -44,5 +44,5 @@
             </div>
         </footer>
     </body>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </html>
