fixed name and nrp on http-server

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="bg-[url('./assets/hero-bg.gif')] w-full h-screen relative bg-cover bg-no-repeat text-white">
             <div class="absolute top-0 left-0 right-0 bottom-0 w-full h-screen bg-black/70 z-[1]"></div>
             <nav class="absolute top-0 left-0 right-0 flex items-center justify-between space-evenly py-10 px-7 z-[2]">
-                <div class="container">
-                    <h1> GRAFKOM &nbsp; ITS &nbsp; IF &nbsp; 2020 </h1>
+                <div class="container mx-auto sm:m-0">
+                    <h1> GRAFKOM &nbsp; IF &nbsp; ITS &nbsp; 2020 </h1>
                 </div>
-                <div class="container ml-20 hidden sm:block">
-                    <ul class="flex items-center space-x-10 text-2xl">
+                <div class="container items-center justify-flex-end pl-96 hidden sm:block">
+                    <ul class="flex space-x-10 text-2xl">
                         <li>
                             <a href="index.html"> Home </a>
                         </li>
@@ -39,8 +39,9 @@
             <canvas id="adeliAriza"></canvas>
         </div>
         <footer class="absolute bottom-0 left-0 right-0 flex w-full justify-between py-14 bg-transparent z-[3]">
-            <div class="container flex items-center justify-flex-start">
-                <h1 class="font-semibold text-xs md:text-2xl lg:text-6xl text-center sm:text-left text-white px-7"> OOGA &nbsp; BOOGA </h1>
+            <div class="container grid items-center justify-flex-start">
+                <h1 class="font-semibold text-xs md:text-2xl lg:text-3xl text-center sm:text-left text-white px-7 py-3"> M F Dwi Handoko </h1>
+                <h2 class="text-xl text-center sm:text-left text-white px-7"> 5 0 2 5 2 0 1 1 5 9 </h2>
             </div>
         </footer>
     </body>
